Created before insert trigger to check validity of entered Object Name and Field Name
Checking if all created on organization objects contains entered object name
Checking if all fields for valid object name contains entered field name

--- a/src/package.xml
+++ b/src/package.xml
@@ -23,5 +23,9 @@
         <members>*</members>
         <name>AuraDefinitionBundle</name>
     </types>
+    <types>
+        <members>ReportFilterTrigger</members>
+        <name>ApexTrigger</name>
+    </types>
     <version>54.0</version>
 </Package>
